tests fixing mobile extra space bug

--- a/src/style/components/heroSection.module.css
+++ b/src/style/components/heroSection.module.css
@@ -3,6 +3,7 @@
   background-image: url("../../assets/horse.jpg");
   width: 100vw;
   height: 350px;
+  overflow-x: hidden;
   background-position: center;
   display: flex;
   justify-content: center;
